--- a/TanksServer/TanksCommon/TanksCommon.csproj
+++ b/TanksServer/TanksCommon/TanksCommon.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Messenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerComManager.cs" />
+    <Compile Include="SharedObjects\GameServerRegister.cs" />
     <Compile Include="TcpServer.cs" />
     <Compile Include="TcpClient.cs" />
     <Compile Include="ServerMessenger.cs" />
