--- a/TanksServer/Game/Game.csproj
+++ b/TanksServer/Game/Game.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{418E5C7A-259D-4300-9EA6-C61D6FCAB1D2}</ProjectGuid>
+    <ProjectGuid>{0B439BE5-65D6-47E2-A8B1-2877F536599D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TanksCommon</RootNamespace>
-    <AssemblyName>TanksCommon</AssemblyName>
+    <RootNamespace>Game</RootNamespace>
+    <AssemblyName>Game</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,27 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessageDecoder.cs" />
-    <Compile Include="MessageEncoder.cs" />
+    <Compile Include="TheGame.cs" />
+    <Compile Include="GameLedger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SharedObjects\GameServerRegister.cs" />
-    <Compile Include="SharedObjects\GameMove.cs" />
-    <Compile Include="SharedObjects\GameStatus.cs" />
-    <Compile Include="SharedObjects\IMessage.cs" />
-    <Compile Include="SharedObjects\InvalidMove.cs" />
-    <Compile Include="SharedObjects\JoinGame.cs" />
-    <Compile Include="SharedObjects\JoinGameAccepted.cs" />
-    <Compile Include="SharedObjects\ListOfOpenGames.cs" />
-    <Compile Include="SharedObjects\MoveAccepted.cs" />
-    <Compile Include="SharedObjects\OpenGame.cs" />
-    <Compile Include="SharedObjects\RequestGames.cs" />
-    <Compile Include="SharedObjects\RequestMove.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="log4net.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\TanksCommon\TanksCommon.csproj">
+      <Project>{418e5c7a-259d-4300-9ea6-c61d6fcab1d2}</Project>
+      <Name>TanksCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
