--- a/TanksServer/GameCom/GameCom.csproj
+++ b/TanksServer/GameCom/GameCom.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{418E5C7A-259D-4300-9EA6-C61D6FCAB1D2}</ProjectGuid>
+    <ProjectGuid>{55C4506C-DF2F-4F89-85A3-A72494EB312F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TanksCommon</RootNamespace>
-    <AssemblyName>TanksCommon</AssemblyName>
+    <RootNamespace>GameCom</RootNamespace>
+    <AssemblyName>GameCom</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,27 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessageDecoder.cs" />
-    <Compile Include="MessageEncoder.cs" />
+    <Compile Include="ClientMessenger.cs" />
+    <Compile Include="Messenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SharedObjects\GameServerRegister.cs" />
-    <Compile Include="SharedObjects\GameMove.cs" />
-    <Compile Include="SharedObjects\GameStatus.cs" />
-    <Compile Include="SharedObjects\IMessage.cs" />
-    <Compile Include="SharedObjects\InvalidMove.cs" />
-    <Compile Include="SharedObjects\JoinGame.cs" />
-    <Compile Include="SharedObjects\JoinGameAccepted.cs" />
-    <Compile Include="SharedObjects\ListOfOpenGames.cs" />
-    <Compile Include="SharedObjects\MoveAccepted.cs" />
-    <Compile Include="SharedObjects\OpenGame.cs" />
-    <Compile Include="SharedObjects\RequestGames.cs" />
-    <Compile Include="SharedObjects\RequestMove.cs" />
+    <Compile Include="ServerComManager.cs" />
+    <Compile Include="ServerMessenger.cs" />
+    <Compile Include="TheMessenger.cs" />
+    <Compile Include="UdpReceiver.cs" />
+    <Compile Include="UdpSender.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="log4net.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TanksCommon\TanksCommon.csproj">
+      <Project>{418e5c7a-259d-4300-9ea6-c61d6fcab1d2}</Project>
+      <Name>TanksCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
