--- a/TanksServer/ComLogic/ComLogic.csproj
+++ b/TanksServer/ComLogic/ComLogic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B439BE5-65D6-47E2-A8B1-2877F536599D}</ProjectGuid>
+    <ProjectGuid>{11BCFBB0-8D75-4F4D-A3F9-5624D042FC6D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Game</RootNamespace>
-    <AssemblyName>Game</AssemblyName>
+    <RootNamespace>ComLogic</RootNamespace>
+    <AssemblyName>ComLogic</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,14 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TheGame.cs" />
-    <Compile Include="GameLedger.cs" />
+    <Compile Include="PlayerLogicForMainServer.cs" />
+    <Compile Include="GameServerLogicForPlayer.cs" />
+    <Compile Include="MainServerLogicForMainServer.cs" />
+    <Compile Include="PlayerLogicForGameServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ComManager\ComManager.csproj">
+      <Project>{27f0d148-dd9f-4d43-8c6a-2ef3c1140ce2}</Project>
+      <Name>ComManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GameCom\GameCom.csproj">
       <Project>{55c4506c-df2f-4f89-85a3-a72494eb312f}</Project>
       <Name>GameCom</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Game\Game.csproj">
+      <Project>{0b439be5-65d6-47e2-a8b1-2877f536599d}</Project>
+      <Name>Game</Name>
     </ProjectReference>
     <ProjectReference Include="..\TanksCommon\TanksCommon.csproj">
       <Project>{418e5c7a-259d-4300-9ea6-c61d6fcab1d2}</Project>
