--- a/TanksServer/GameCom/GameCom.csproj
+++ b/TanksServer/GameCom/GameCom.csproj
@@ -45,8 +45,8 @@
   <ItemGroup>
     <Compile Include="ClientMessenger.cs" />
     <Compile Include="Messenger.cs" />
+    <Compile Include="NetworkStreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerComManager.cs" />
     <Compile Include="ServerMessenger.cs" />
     <Compile Include="TheMessenger.cs" />
     <Compile Include="UdpReceiver.cs" />
@@ -57,10 +57,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Game\Game.csproj">
-      <Project>{0b439be5-65d6-47e2-a8b1-2877f536599d}</Project>
-      <Name>Game</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TanksCommon\TanksCommon.csproj">
       <Project>{418e5c7a-259d-4300-9ea6-c61d6fcab1d2}</Project>
       <Name>TanksCommon</Name>
