--- a/TanksServer/GameServer/GameServer.csproj
+++ b/TanksServer/GameServer/GameServer.csproj
@@ -71,7 +71,6 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="DelegateCommand.cs" />
-    <Compile Include="LogEvent.cs" />
     <Compile Include="GameViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -109,6 +108,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ComLogic\ComLogic.csproj">
+      <Project>{11bcfbb0-8d75-4f4d-a3f9-5624d042fc6d}</Project>
+      <Name>ComLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GameCom\GameCom.csproj">
       <Project>{55c4506c-df2f-4f89-85a3-a72494eb312f}</Project>
       <Name>GameCom</Name>
