--- a/TanksServer/TanksServer/TanksServer.csproj
+++ b/TanksServer/TanksServer/TanksServer.csproj
@@ -72,7 +72,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DelegateCommand.cs" />
-    <Compile Include="LogEvent.cs" />
     <Compile Include="ServerViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -110,6 +109,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ComLogic\ComLogic.csproj">
+      <Project>{11bcfbb0-8d75-4f4d-a3f9-5624d042fc6d}</Project>
+      <Name>ComLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ComManager\ComManager.csproj">
+      <Project>{27f0d148-dd9f-4d43-8c6a-2ef3c1140ce2}</Project>
+      <Name>ComManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GameCom\GameCom.csproj">
       <Project>{55c4506c-df2f-4f89-85a3-a72494eb312f}</Project>
       <Name>GameCom</Name>
