--- a/TanksServer/GameCom/GameCom.csproj
+++ b/TanksServer/GameCom/GameCom.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ClientMessenger.cs" />
     <Compile Include="Hash.cs" />
+    <Compile Include="MessageInfo.cs" />
     <Compile Include="Messenger.cs" />
     <Compile Include="NetworkStreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
