If hash fails process will ask for resend - other process will resend. Will periodically check that all messages have been acknowleged, will resend if not. Will ensure that messages are processed in order, will ask for resend if not.

--- a/TanksServer/TanksCommon/TanksCommon.csproj
+++ b/TanksServer/TanksCommon/TanksCommon.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SharedObjects\JoinGameAccepted.cs" />
     <Compile Include="SharedObjects\ListOfOpenGames.cs" />
     <Compile Include="SharedObjects\LogEvent.cs" />
+    <Compile Include="SharedObjects\MessageResend.cs" />
     <Compile Include="SharedObjects\MoveAccepted.cs" />
     <Compile Include="SharedObjects\OpenGame.cs" />
     <Compile Include="SharedObjects\Ping.cs" />
